   - ofaGuidedInputBin: do not override a user-set date when setting a template (todo #1456). 
   - ofaMainWindow: better switch back from 'minimal' display mode.
   - Fix conversion to DBModel v37 of OFA_T_BAT table.
   - ofaRecurrentRunTreeview: fix refresh bug when cancelling operations.
   - ofoEntry: fix export format for unset counters.

 Other changes:

   - ofaBackupDisplay: new class.
   - ofaIExportable::get_basename(): new method.
   - ofaIExportable::get_published(): new method.
   - ofaIExporter: new interface.
   - ofaIRenderer: interface is completed with font and color getters (todo #1452).
   - ofaRecurrentModelPage: precise the action label (todo #1458). 
   - ofaStreamFormat: is now able to define which fields are user-updatable.
   - ofaTVBin: is now exportable (for now only implemented in ofaEntryPage).
   - core/ofo-entry-fec.{c,h}: new files.

-----------------------------------------------------------------------
 Version 0.69
 ============

 Released on 2017-04-11

 Total files count:    836 files
 Total lines count: 565028 lines
 maintainer/run-distcheck.sh: real	6m7.099s

 New features and improvements:

   Core DB Model v37
   VAT DB Model v9

   - AccountsBalance: new with beginning and ending soldes (todo #1385).
   - AccountsBookSummary: have balance and page break by class (todo #1390). 
   - AccountsBookSummary: sort by operation date or effect date (todo #1419). 
   - Account properties: have a revealer on current and archived balances (todo #1446).
   - Balance check: distinguish between rough, validated and future balances (todo #1392).
   - Balance check: improve the UI, expanding the widget when appropriate (todo 1449).
   - Display unsettled entries on settleable accounts (todo #1381).
   - Display unreconciliated entries on reconciliable accounts (todo #783).
   - Entry page: default to delete all the entries of an operation (todo #1397).
   - Entry page: display the settlement group (todo #1429).