@@ -126,6 +126,7 @@ gboolean      my_utils_input_stream_new               ( const gchar *filename, G
 
 void          my_utils_pango_layout_ellipsize         ( PangoLayout *layout, gint max_width );
 
+gboolean      my_utils_window_position_get            ( myISettings *settings, const gchar *name, gint *x, gint *y );
 gboolean      my_utils_window_position_restore        ( GtkWindow *window, myISettings *settings, const gchar *name );
 void          my_utils_window_position_save           ( GtkWindow *window, myISettings *settings, const gchar *name );
 gboolean      my_utils_window_position_get_has_pos    ( myISettings *settings, const gchar *name );
